<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="title_event_detail">Event Detail</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_schedule">Schedule</string>

    <string name="title_section_schedule">My Schedule</string>
    <string name="title_section_browse">Browse</string>
    <string name="title_section_map">Map</string>
    <string name="title_section_about">About</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="action_star_add">Add to favorites</string>
    <string name="action_star_remove">Remove from favorites</string>

    <string name="share_text">I\'ll go to the event \'%s\' during HWcon 2016! #hwcon2016</string>

    <string name="about_mail_header">Mail</string>
    <string name="about_date_header">Date</string>
    <string name="about_location_header">Location</string>
    <string name="about_website_header">Website</string>

    <string name="label_keywords">Tags</string>
    <string name="label_time">Time</string>
    <string name="label_location">Location</string>
    <string name="label_speakers">Speakers</string>

    <string name="star_tip_title">Tip</string>
    <string name="star_tip_message">Click the Star to add this Event to \'My Schedule\'. \nDo this for all Events you intend to attend.\n\nLogin with Google+ to automatically sync between all your devices.</string>
    <!--
        Specific for this convention
        Change these when using for another convention
    -->
    <string name="app_name">HWcon 2016</string>
    <string name="about_description">A My little Pony Convention in the Netherlands for all generations!</string>
    <string name="about_location_details">Event Center Fokker, IJweg 1094, 2133 MN Hoofddorp, The Netherlands</string>
    <string name="about_mail_details">info@hwcon.nl</string>
    <string name="about_website_details">www.hwcon.nl</string>
    <string name="about_date_details">February 27-28, 2016</string>

    <string name="map_floor0">Ground floor</string>
    <string name="map_floor1">2nd floor</string>
    <string name="map_floor2">Attic</string>

    <!-- Don't translate these // -->
    <string name="syncadapter_domain" translatable="false">nl.frankkie.hwcon2016</string>
    <string name="syncadapter_authority" translatable="false">nl.frankkie.hwcon2016</string>
    <string name="placeholder_short" translatable="false">Lorem ipsum</string>
    <string name="placeholder_long" translatable="false">Lorem ipsum dolor sit amet.</string>
    <string name="placeholder_very_long" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent viverra aliquam neque id ultrices. Nullam lobortis orci eu varius tincidunt. In convallis lorem diam. Maecenas auctor sagittis porttitor. Curabitur dapibus neque odio, in finibus orci rutrum non. Nullam dapibus elit id magna porta, id condimentum purus pretium. Aenean non erat rutrum, finibus dui ut, ornare odio. Aliquam mollis pretium neque, at consequat ligula posuere vitae. Vestibulum sed venenatis felis. Nullam lorem lorem, bibendum vitae urna nec, viverra consequat erat.</string>
    <!-- Endof dont translate // -->
    <string name="schedule_empty">There is nothing in your Schedule, yet! \nClick on the Star at Events in Browse-section to add them to \'My Schedule\'. \nDo this for all Events you intend to attend.</string>
    <string name="about_map_app_not_found">There is no mapping app (like Google Maps) installed. Please install a mapping app and try again.</string>
    <string name="about_this_app">About this App</string>
    <string name="aboutapp_licences">Licences</string>
    <string name="title_activity_about_app">About this App</string>
    <string name="aboutapp_frankkienl_description">This app has been made by FrankkieNL \nFor more apps see: \nhttp://frankkie.nl/</string>
    <string name="title_section_qr_hunt">QR Hunt</string>
    <string name="title_section_login">Login/Logout</string>
    <!-- Google Play Games //-->
    <!-- 935982150118-6d23ufpeth053935sniv19f82t1ab407.apps.googleusercontent.com //-->
    <string name="google_play_games_app_id" translatable="false">935982150118</string>
    <string name="achievement_ready_to_go" translatable="false">CgkI5uOI554bEAIQAQ</string>
    <string name="achievement_personal_schedule" translatable="false">CgkI5uOI554bEAIQAg</string>
    <string name="achievement_its_a_start" translatable="false">CgkI5uOI554bEAIQAw</string>
    <string name="achievement_easter_egg" translatable="false">CgkI5uOI554bEAIQBA</string>
    <string name="achievement_find_5" translatable="false">CgkI5uOI554bEAIQBQ</string>
    <string name="achievement_egghead" translatable="false">CgkI5uOI554bEAIQBw</string>
    <string name="achievement_personal_style" translatable="false">CgkI5uOI554bEAIQCA</string>
    <string name="achievement_in_a_hurry" translatable="false">CgkI5uOI554bEAIQCQ</string>
    <string name="achievement_latest_news" translatable="false">CgkI5uOI554bEAIQCg</string>
    <string name="achievement_another_easter_egg" translatable="false">CgkI5uOI554bEAIQCw</string>
    <string name="sign_out">Sign out</string>
    <string name="view_achievements">View Achievements</string>
    <string name="qrlist_empty_placeholder">QR code list is empty</string>
    <string name="qrlist_empty_no_hunt">There is no QR hunt at this convention.\n\nBlame convention staff.</string>
    <string name="qrlist_empty_names_hidden">No QR codes found yet!</string>
    <string name="qr_scan">Scan</string>
    <string name="barcodescanner_not_installed_title">Install Barcode Scanner</string>
    <string name="barcodescanner_not_installed_message">This application requires Barcode Scanner. Would you like to install it?\n(Required to participate in the QR Hunt)</string>
    <string name="qr_not_on_list">QR Code not on the list!</string>
    <string name="qr_found">Good work! You have found a QR Code.</string>
    <string name="qr_found_already">You have found this QR Code before. Go look for another one!</string>
    <string name="about_view_map">View on Map</string>
    <string name="qr_place_in_rectangle">Place QR code in rectangle to scan.</string>
    <string name="qr_login_required_title">Login required</string>
    <string name="qr_login_required_message">Its required that you sign in using Google Play Games to participate in the QR Hunt.</string>
    <string name="qr_tip_message">Search the hidden QR codes, and scan them with your Camera of your device. Find all QR codes!</string>
    <string name="logging_in">Logging in...</string>
    <string name="google_play_games_error">Error with Google Play Games, please restart the app.</string>
    <string name="ask_nickname">What\'s your nickname?</string>
    <string name="browse_empty">Please wait until data is synced...</string>
    <string name="login_details">\nLogin to sync to you schedule between all you devices.\n\nLogging in is required to participate in the QR Hunt!\n\nUse the button below to login.</string>
    <string name="title_section_news">News</string>
    <string name="news_empty_placeholders">No newsarticles found.</string>
    <string name="news_empty_placeholder">No newsarticles found.</string>
    <string name="about_venue_location">About Venue Location</string>
    <string name="about_venue_location_view_googlemaps">View in Google Maps</string>
    <string name="about_venue_location_title">Venue Location</string>
    <string name="about_changedicon">Changed app icon</string>
    <string name="aboutapp_viewlicences">View Licences</string>
    <string name="not_logged_in">not logged in</string>
    <string name="current_lang">EN</string>
    <string name="about_convention_title">Hearth\'s Warming Con</string>
    <string name="another_easteregg_found">Found another easter egg :D</string>

</resources>
