<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.AboutActivity">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/actionbar_background"
                app:titleTextAppearance="@style/ToolbarTitle" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context=".activties.AboutActivity">


                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/about_hwcon_title"
                            android:textSize="32sp" />

                        <!-- Banner image (change image when using for other convention) -->
                        <ImageView
                            android:id="@+id/about_banner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:adjustViewBounds="true"
                            android:paddingTop="16dp"
                            android:src="@drawable/hwcon2016_banner" />

                        <TextView
                            style="@style/textStyle_details"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="16dp"
                            android:text="@string/about_description" />

                        <!-- Location //-->
                        <TextView
                            style="@style/textStyle_header"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/about_location_header" />

                        <TextView
                            style="@style/textStyle_details"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/about_location_details" />

                        <Button
                            android:id="@+id/about_view_maps"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/about_view_map" />

                        <!-- Date and Time //-->
                        <TextView
                            style="@style/textStyle_header"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/about_date_header" />

                        <TextView
                            style="@style/textStyle_details"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/about_date_details" />

                        <!-- Website //-->
                        <TextView
                            style="@style/textStyle_header"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/about_website_header" />

                        <TextView
                            style="@style/textStyle_details"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autoLink="web"
                            android:text="@string/about_website_details" />

                        <!-- Mail //-->
                        <TextView
                            style="@style/textStyle_header"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/about_mail_header" />

                        <TextView
                            style="@style/textStyle_details"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autoLink="email"
                            android:text="@string/about_mail_details" />

                        <Button
                            android:id="@+id/about_btn_aboutapp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/about_this_app" />
                    </LinearLayout>
                </ScrollView>
            </LinearLayout>
        </LinearLayout>
    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_drawer"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/navigation"
        tools:layout="@layout/fragment_navigation_drawer" />
</android.support.v4.widget.DrawerLayout>

