<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/actionbar_background"
        app:titleTextAppearance="@style/ToolbarTitle" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <LinearLayout
                    android:id="@+id/aboutapp_textcontainer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/textStyle_header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/about_this_app" />

                    <TextView
                        android:id="@+id/aboutapp_version"
                        style="@style/textStyle_details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/aboutapp_frankkienl_description"
                        style="@style/textStyle_details"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autoLink="web"
                        android:text="@string/aboutapp_frankkienl_description" />
                </LinearLayout>

                <!--
                    android:layout_width="120dp"
                    android:layout_height="140dp"
                //-->
                <ImageView
                    android:id="@+id/aboutapp_frankkienl_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_weight="0"
                    android:adjustViewBounds="true"
                    android:maxHeight="140dp"
                    android:paddingTop="16dp"
                    android:src="@drawable/frankkienl" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/textStyle_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/aboutapp_licences" />

                <Button
                    android:id="@+id/aboutapp_viewlicences"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/aboutapp_viewlicences" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>