<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:titleTextAppearance="@style/ToolbarTitle"
        android:background="@color/actionbar_background" />

    <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                >

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/about_venue_location_title"
                            android:layout_marginBottom="16dp"
                            android:textSize="32sp" />

                        <TextView
                            style="@style/textStyle_details"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/about_location_details" />

                        <Button
                            android:id="@+id/about_view_maps"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/about_venue_location_view_googlemaps" />

                        <TextView
                            android:id="@+id/about_venue_location_travel_times"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </LinearLayout>
                </ScrollView>
            </LinearLayout>
        </FrameLayout>
</LinearLayout>
